--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>The lost robot of Solana. $404 shouldn’t exist… but it does.</p>
     
     <h2>📈 Buy $404</h2>
-    <a href="https://pump.fun/[PASTE_PUMP.FUN_LINK_HERE]">Buy on Pump.fun</a>
+    <a href="https://pump.fun/coin/4oiWrSecUMhLeAeLRJc9ibA2XbQUFhzoDLPpScR7pump">Buy on Pump.fun</a>
     
     <h2>📝 Contract</h2>
     <div class="contract">[PASTE_SOLSCAN_CONTRACT_ADDRESS_HERE]</div>
