--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <a href="https://pump.fun/coin/4oiWrSecUMhLeAeLRJc9ibA2XbQUFhzoDLPpScR7pump">Buy on Pump.fun</a>
     
     <h2>📝 Contract</h2>
-    <div class="contract">[PASTE_SOLSCAN_CONTRACT_ADDRESS_HERE]</div>
+    <div class="contract">4oiWrSecUMhLeAeLRJc9ibA2XbQUFhzoDLPpScR7pump</div>
     
     <h2>🤖 Join the Error</h2>
     <a href="https://t.me/sola404coin">Telegram</a> | 
