--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     <a href="https://x.com/404_solanas">Twitter/X</a>
     
     <h2>🚨 Meme Zone</h2>
-    <img src="404-meme.jpg" width="300" alt="404 meme">
+    <img src="404-meme.gif" width="300" alt="404 meme">
 </body>
 </html>
