--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>$404 Coin - Error 404: Gains Not Found</title>
+    <title>$404 Coin - Error 404: Gains Found</title>
     <style>
         body { 
             background: #000; 
@@ -27,7 +27,7 @@
 </head>
 <body>
     <img src="404-robot-logo.png" class="logo" alt="$404 Logo">
-    <h1>Error 404: Gains Not Found</h1>
+    <h1>Error 404: Gains Found</h1>
     <p>The lost robot of Solana. $404 shouldn’t exist… but it does.</p>
     
     <h2>📈 Buy $404</h2>
